RESOLVED FIXED60888
Web Inspector: debuggerWasEnabled notification should not be send to frontend on navigation.
https://bugs.webkit.org/show_bug.cgi?id=60888
Summary Web Inspector: debuggerWasEnabled notification should not be send to frontend...
Pavel Podivilov
Reported 2011-05-16 08:14:56 PDT
Web Inspector: debuggerWasEnabled notification should not be send to frontend on navigation.
Attachments
Patch. (5.93 KB, patch)
2011-05-16 08:15 PDT, Pavel Podivilov
yurys: review+
webkit.review.bot: commit-queue-
Pavel Podivilov
Comment 1 2011-05-16 08:15:26 PDT
Yury Semikhatsky
Comment 2 2011-05-16 08:23:19 PDT
Comment on attachment 93645 [details] Patch. View in context: https://bugs.webkit.org/attachment.cgi?id=93645&action=review > Source/WebCore/inspector/InspectorController.h:-118 > - void disableDebugger(); Please make sure this doesn't break Safari. I only see Start debugging... but please double check. > Source/WebCore/inspector/InspectorDebuggerAgent.cpp:144 > + m_inspectorState->setBoolean(DebuggerAgentState::debuggerEnabled, false); After front-end reopening debugger will be off in Safari. r- for this.
Yury Semikhatsky
Comment 3 2011-05-16 08:24:56 PDT
(In reply to comment #2) > After front-end reopening debugger will be off in Safari. r- for this. Sorry, of cause it will be restored from the local store on the front-end and pushed to the back end.
WebKit Review Bot
Comment 4 2011-05-16 08:25:27 PDT
Early Warning System Bot
Comment 5 2011-05-16 08:27:45 PDT
Pavel Podivilov
Comment 6 2011-05-16 10:04:46 PDT
Note You need to log in before you can comment on or make changes to this bug.